# NYC-Taxi-Demand

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
config/: settings.yaml
sql/marts/: 01_mart_zone_demand.sql  02_mart_hourly_volume.sql  03_mart_daily_volume.sql  04_mart_route_flows.sql
src/taxiflow/: cli.py  config.py  duck.py  logging_setup.py  pipeline.py
src/taxiflow/analytics/: __init__.py  anomaly.py  forecast.py
src/taxiflow/bi/: export.py
src/taxiflow/ingest/: __init__.py  synthetic.py  tlc.py  zones.py
src/taxiflow/quality/: __init__.py  checks.py  schemas.py
src/taxiflow/staging/: clean.py
src/taxiflow/viz/: plots.py
src/taxiflow/warehouse/: build.py
tests/: conftest.py  test_anomaly.py  test_forecast.py  test_marts_sql.py  test_quality.py  test_staging.py  test_synthetic.py
